# death_stick

./: .gitignore  .gitmodules  Containerfile  Pipfile  README.md  bms_specs.md  carbon_fiber_tubing_specs.md  cell_specs.md  electric_motor_spces.md  electric_motor_specs.md  parts.csv  stick_design.ipynb
.ipynb_checkpoints/: stick_design-checkpoint.ipynb
construction/: flipsky_wire_colors.md
container/: esp-idf-entrypoint.sh
part_design_CAD/: Death Stick Assembly 1.step  Death Stick Crotch Blender parts - Part27^Assembly 1.step  Death Stick Crotch Blender parts - Part28^Assembly 1.step  Death Stick Crotch Blender parts - Part29^Assembly 1.step  Part Studio 1 - button_holder.step  Part Studio 1 - cell_spacer.3mf  Part Studio 1 - cell_spacer.step  Part Studio 1 - cell_spacer_neg_end.step  Part Studio 1 - cell_spacer_pos_end.step  Part Studio 1 - end_tube_cap.step  Part Studio 1 - motor_mount_bottom.step  Part Studio 1 - motor_mount_top.step  Part Studio 1 - top_tube_end_cap.step  (+1 more)
software/src/stick_controller/main/: CMakeLists.txt  idf_component.yml  main.c
software/src/stick_controller/main/Button_Driver/: Button_Driver.c  Button_Driver.h  Speed_Buttons.c  Speed_Buttons.h  multi_button.c  multi_button.h
software/src/stick_controller/main/LCD_Driver/: ST7789.c  ST7789.h  Vernon_ST7789T.c  Vernon_ST7789T.h
software/src/stick_controller/main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
software/src/stick_controller/main/VESC_Driver/: vesc_uart.c  vesc_uart.h
software/src/stick_controller/main/images/: bg_image.c  dark_retro_sea_small.c  pictures.c  screenshot1.c
(+25 files in other folders)
